crates/ars-components/src/overlay/alert_dialog/snapshots/ars_components__overlay__alert_dialog__tests__alert_dialog_action_trigger_destructive.snap
---
source: crates/ars-components/src/overlay/alert_dialog/mod.rs
expression: "snapshot_attrs(&fresh_service(Props\n{\n    is_destructive: true, ..test_props()\n}).connect(&|_| {}).action_trigger_attrs(),)"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-destructive",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "action-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "alert-dialog",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Confirm",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
