crates/ars-components/src/overlay/alert_dialog/snapshots/ars_components__overlay__alert_dialog__tests__alert_dialog_cancel_trigger_localized_label.snap
---
source: crates/ars-components/src/overlay/alert_dialog/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).cancel_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "cancel-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "alert-dialog",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Cancelar",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
